2005-06-03(jol):
	- create the core directory, it should contains all stuff about
	  eim. Begin to think about core structure and how to save in good
	  way all account information. You can take a look at the TODO file.
	
2005-05-30(jol):
	- begin the config stuff
	- fix compilation error
	
2005-05-07(jol):
	- Add some documentation
	- Continue some test with edje, even if it's not used for now
	- Use ewl to create the default graphic interface, even if it not for now eyes candy, it will
	  allow us to have a first version.
	- Begin to create the Account Properties Window (use psi as model for now).

2005-04-20(jol):
	- Add a scons support (not finished)

2005-04-14(jol):
	- Currently, i learn edje in order to create the eim graphical
	  interface with it. Edje is really great and really powerful even 
	  if i know only a little part of it. All the stuff is inside
	  the data directory. More precisely, you can go inside the 
	  data/themes/default and run the "make preview" command to see
	  the gui. If you want to work on it your are welcome. So the 
	  project is not dead, i work on it even if i'm busy.
	- Add some test around edje. It a little buggy, but it is a beginning
	- Add a BUTTON_VLINE macro
	
2005-03-31(jol):
	- Fix a dirty bug inside the get_data of the egxp_message
	- Fix a bug in the roster, in fact, all contacts were referenced by their
	  name instead of their jid.
	- It seems to have no memory leak
	
2005-03-30(jol):
	- fix a bug in the xmpp_jid code,
	- the bug hunting progress ...
	
2005-03-22(jol):
	- Now all contacts and group are stored in memory,
	- Minor add inside xmpp_jid.
	
2005-03-21(jol):
	- Add egxp_node_print to display the defined protocol,
	- Add egxp_display to show all information to the egxp structure,
	- Now, it's forbidden to add condition to a node if the node is already registered to its parent,
	- Code refactoring, use of xmpp_opcode_iq in xmpp_opcode_init and xmpp_im_opcode_init,