@@ -5,7 +5,7 @@
 #include <Ecore_Data.h>
 
 #include "egxp/egxp.h"
-
+#include "account_properties.h"
 
 typedef struct _Eim Eim;
 #define EIM(o) ((Eim*)o)
@@ -14,6 +14,9 @@ struct _Eim {
   /* need to keep a list of Egxp Structure */
   Ecore_List * egxps;
 
+  /* contains all accounts properties */
+  Ecore_List * account_properties;
+  
 };
 
 
@@ -35,6 +38,12 @@ void eim_config_init (Eim *e);
  * Free the eim structure
  */
 void eim_free (Eim *e);
+
+
+/**
+ * Initialize the Egxp from an account properties
+ */
+Egxp * eim_create_egxp_from (AccountProperties * ap);
 
 
 #endif
